--- a/owl/index.html
+++ b/owl/index.html
@@ -31,7 +31,7 @@
 
                 <!-- <p><h1>Owl Carousel 2</h1></p><br> -->
        
-        <img class="img" src="E:\Html-task\img\owl-logo.png" alt="mr. Owl">
+        <img class="img" src="img\owl-logo.png" alt="mr. Owl">
        
     </div>
 
